added mass recording view for quickly adding large amount of cards
